# 42_Projects

./: .gitignore  ft_atoi.c  ft_calloc.c  ft_lstlast.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_striteri.c  ft_strjoin.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  output_file.txt
Amazing/: ,  Makefile  README.md  a_maze_ing.py  algorithm.py  config.py  config.tx  config.txt  config.txta  dfs.py  log.txt  maze  maze.txt  mazegen-1.0.0-py3-none-any.whl  output_file.txt  output_validator.py  parser.py
Codexion/: Makefile  README.md  a.out  data_race_example.c  external_functions.txt  header.h  header.h.gch  main.c  parser.c  resources.txt  teste.c  teste.h  teste2.c
born2beRoot/: README.md  monitoring.sh
ft_printf/: Makefile  README.md  a.out  ft_printf.c  ft_printf.h  ft_printf_utils.c
get_next_line/: README.md  a.out  file.txt  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  largefile.txt
libft/: Makefile  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_tolower.c  libft.h
old_push_swap/: Makefile  a.out
push_swap/: Makefile  README.md  a.out  (+7 more)
py_m/M08/ex1/: loading.py  pyproject.toml
(+218 files in other folders)
