[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis training"
authors = ["Adrian Dias <adriandias0709@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.25"
matplotlib = "^3.7"
flake8 = "^7.3.0"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"